# ExifAnalyzer

./: .gitignore  AGENTS.md  BETA_TESTING.md  IMPLEMENTATION_PLAN.md  INSTALLATION_GUIDE.md  Instructions.md  PRD.md  README.md  REFACTORING_REPORT.md  RELEASE_CHECKLIST.md  TECH_SPEC.md  build_config.py  build_executable.py  changelog.md  cli_launcher.py  coverage_report.md  current_task.md  gui_launcher.py  pyproject.toml  refactoring_summary.txt  requirements.txt  tech_stack.md  test_gui.py  version_info.txt
.claude/: settings.local.json
docs/: METADATA_DISCOVERY_PRD.md  METADATA_DISCOVERY_TECH_SPEC.md
src/exif_analyzer/: __init__.py
src/exif_analyzer/adapters/: __init__.py  gif_adapter.py  jpeg_adapter.py  png_adapter.py  tiff_adapter.py  webp_adapter.py
src/exif_analyzer/cli/: __init__.py  main.py  progress.py  strip_handler.py
src/exif_analyzer/core/: __init__.py  base_adapter.py  config.py  engine.py  exceptions.py  file_safety.py  logger.py  metadata.py
src/exif_analyzer/discovery/: __init__.py  engine.py  extractor.py  models.py
src/exif_analyzer/gui/: __init__.py  main.py
tests/: conftest.py  test_base_adapter.py  test_cli_commands.py  test_config.py  test_core_engine.py  test_file_safety.py  test_gif_adapter.py  test_jpeg_adapter.py  test_metadata.py  test_png_adapter.py  test_tiff_adapter.py  test_webp_adapter.py
